--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@remix-run/node": "^2.16.3",
     "@remix-run/react": "^2.16.3",
     "@remix-run/serve": "^2.16.3",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^4.1.0",
@@ -35,6 +36,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
+    "react-lazy-load-image-component": "^1.6.3",
+    "react-resizable-panels": "^2.1.7",
     "remix-utils": "^8.5.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
