--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -40,6 +41,7 @@
     "dotenv-flow": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.7.1",
+    "es-toolkit": "^1.36.0",
     "isbot": "^4.4.0",
     "lucide-react": "^0.485.0",
     "pino": "^9.6.0",
