--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@blocknote/core": "^0.26.0",
     "@blocknote/react": "^0.26.0",
     "@blocknote/shadcn": "^0.26.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -42,7 +44,9 @@
     "dotenv-flow": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.7.1",
+    "emoji-mart": "^5.6.0",
     "es-toolkit": "^1.36.0",
+    "frimousse": "^0.2.0",
     "isbot": "^4.4.0",
     "lucide-react": "^0.485.0",
     "pino": "^9.6.0",
@@ -54,6 +58,7 @@
     "react-hook-form": "^7.55.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-resizable-panels": "^2.1.7",
+    "react-virtuoso": "^4.12.7",
     "remix-utils": "^8.5.0",
     "snakecase-keys": "^8.0.1",
     "tailwind-merge": "^3.0.2",
