--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv-flow": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.7.1",
+    "embla-carousel-react": "^8.6.0",
     "emoji-mart": "^5.6.0",
     "es-toolkit": "^1.36.0",
     "frimousse": "^0.2.0",
